flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flask
  name: flask-svc
spec:
  selector:
    app: flask-app
  ports:
  - port: 5000
    targetPort: 5000
