flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask
  annotations:
    nginx.ingress.kubernetes.io/preserve-host: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 4onelove.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-svc
            port:
              number: 5000
              
  - host: www.4onelove.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-svc
            port:
              number: 5000
